Name:            archive
Version:         1.7
Cabal-Version:   >= 1.2
Category:        System
Synopsis:        A library and programs for creating hardlinked incremental archives or backups
Description:     Uses rsync, etc to before backups similar to the old timemachine script and the newer 'Time Machine' OS X tool.
License:         BSD3
License-File:    COPYRIGHT
Author:          David Fox, Jeremy Shaw
Maintainer:      partners@seereason.com
Stability:       alpha
Build-Type:      Simple

flag network-uri
 Description: Get Network.URI from the network-uri package
 Default: True

Library
  Build-Depends:
    applicative-extras,
    base >= 3 && <5,
    bytestring,
    debian >= 2.19,
    debian-mirror >= 1.1.3,
    directory,
    Extra,
    filepath,
    help,
    HUnit,
    old-locale,
    pretty,
    process,
    process-extras,
    regex-compat,
    regex-posix,
    time,
    unix,
    Unixutils,
    utf8-string
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network < 2.6
  Exposed-Modules:
    System.Archive.Archive,
    System.Archive.Prune,
    System.Archive.Site,
    System.Archive.Target,
    System.Archive.UpdateMirror,
    System.Archive.AptMethods
  ghc-options:	-O2 -W

Executable archive
  Main-Is:         util/ArchiveMain.hs
  -- Hs-Source-Dirs:  util
  ghc-options:	-O2 -W -threaded
